# greenshop

./: .gitignore  pyproject.toml
account/: admin.py  models.py
account/migrations/: 0001_initial.py
greenshop/: settings.py  urls.py
post/: admin.py  models.py  serializers.py  urls.py  views.py
post/migrations/: 0001_initial.py
product/: admin.py  choises.py  filters.py  models.py  paginations.py  serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_plant_discount_price.py
